@@ -26,8 +26,6 @@ GNU General Public License for more details.
 #include <vector>
 #include <string>
 
-using namespace std;
-
 namespace OpenBabel {
 
 class OBMol;
